trunk: Port a fix for bug #15308 Problem of Order with Enum Column in Primary Key from branches/5.0.